--- a/Dasmotos Arts and Crafts/index.html
+++ b/Dasmotos Arts and Crafts/index.html
@@ -7,11 +7,23 @@
     <link href="resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <br />
-    <div class="header">Dasmoto's Arts & Crafts</div>
-    <br />
-    <div class="brushes">Brushes</div>
-    <br />
-    <
+    <h1>Dasmoto's Arts & Crafts</h1>
+    <div class="item">
+        <h2 id="brush">Brushes</h2>
+        <img src="resources/image/hacksaw.jpeg" alt="photo of hacksaw brushes">
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
+    <div class="item">
+        <h2 id="frame">Frames</h2>
+        <img src="resources/image/frames.jpeg" alt="photo of various sized and colored picture frames">
+        <h3>Art Frames (assorted)</h3>
+        <p>Assorted frames made of differet material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span></p>
+    </div>
+    <div class="item">
+        <h2 id="paint">Paint</h2>
+        <img src="resources/image/finnish.jpeg" alt="opened acrylic paint tubes on a table">
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz to 8 oz). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="price">Starting at $5.00 / tube.</span></p>
+    </div>
 </body>
 </html>
