--- a/Aoifes Travel Log/index.html
+++ b/Aoifes Travel Log/index.html
@@ -4,6 +4,10 @@
   <title>Morocco</title>
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&family=Work+Sans" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
@@ -18,7 +22,7 @@
 
   <!-- Banner -->
   <div class="banner">
-    <h2>DEC 20XX</h2>
+    <h2><DEC 20XX</h2>
     <h1>Morocco</h1>
   </div>
 
